fix horizontal scrollbar

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@
     width: 286px;
     height: 204px;
     top: -105px;
-    right: -1px;
+    right: 0;
     position: absolute;
     background-size: contain
 }
